[gd_scene load_steps=9 format=3 uid="uid://undd6idwn2hm"]

[ext_resource type="Script" path="res://difficulty_menu/difficulty_menu.gd" id="1_6ct54"]
[ext_resource type="Texture2D" uid="uid://c38rcgf27vps6" path="res://main_menu/main_menu.jpg" id="2_6tpja"]
[ext_resource type="Texture2D" uid="uid://kgoger23fqrw" path="res://pics/nidza_struje.png" id="3_xwigw"]
[ext_resource type="Texture2D" uid="uid://dp4tu387yiv0g" path="res://pics/mito_dajic.png" id="4_1ak22"]
[ext_resource type="Texture2D" uid="uid://boiiud36y7pp2" path="res://pics/korupsone.png" id="5_bdmak"]

[sub_resource type="LabelSettings" id="LabelSettings_kjcdt"]
font_size = 31
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_dqogo"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_t5k44"]
font_size = 26
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ct54")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -385.0
offset_top = -273.0
offset_right = 405.0
offset_bottom = 232.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Choose difficulty"
label_settings = SubResource("LabelSettings_kjcdt")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Choice1" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Choice1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_right = 47.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Nidža Struja"
label_settings = SubResource("LabelSettings_dqogo")

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Choice1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -50.5
offset_right = 108.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
text = "- Part of a violent gang
- Carries a bat in his Audi
- Likes street fights
- Hasn't finished high school"
label_settings = SubResource("LabelSettings_dqogo")

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Choice1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.5
offset_top = -23.0
offset_right = 36.5
grow_horizontal = 2
grow_vertical = 0
text = "150 000 €"
label_settings = SubResource("LabelSettings_t5k44")

[node name="Choice2" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Choice2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_right = 47.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Dimitrije Mito Dajić"
label_settings = SubResource("LabelSettings_dqogo")

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Choice2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -50.5
offset_right = 108.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
text = "- Inherited a company
- Prone to substance abuse
- Arrested and freed 5 times
- \"Do you know who I am?\""
label_settings = SubResource("LabelSettings_dqogo")

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Choice2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.5
offset_top = -23.0
offset_right = 36.5
grow_horizontal = 2
grow_vertical = 0
text = "500 000 €"
label_settings = SubResource("LabelSettings_t5k44")

[node name="Choice3" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Choice3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_right = 47.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Nebojša Korup Šone"
label_settings = SubResource("LabelSettings_dqogo")

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Choice3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = -50.5
offset_right = 108.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
text = "- Nobody knows what he does
- Drives a black limo
- Has high cholesterol
- A chain smoker"
label_settings = SubResource("LabelSettings_dqogo")

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/Choice3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.5
offset_top = -23.0
offset_right = 36.5
grow_horizontal = 2
grow_vertical = 0
text = "1 300 000 €"
label_settings = SubResource("LabelSettings_t5k44")

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(577, 326)
scale = Vector2(0.598958, 0.607407)
texture = ExtResource("2_6tpja")

[node name="NidzaStruje" type="Sprite2D" parent="."]
position = Vector2(315, 194)
scale = Vector2(0.198582, 0.206422)
texture = ExtResource("3_xwigw")

[node name="MitoDajic" type="Sprite2D" parent="."]
position = Vector2(588, 193)
scale = Vector2(0.120621, 0.111026)
texture = ExtResource("4_1ak22")

[node name="Korupsone" type="Sprite2D" parent="."]
position = Vector2(855, 193)
scale = Vector2(0.223837, 0.237269)
texture = ExtResource("5_bdmak")

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Choice1" to="." method="_on_choice_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Choice2" to="." method="_on_choice_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Choice3" to="." method="_on_choice_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
